--- a/multiplayer-gameplay.html
+++ b/multiplayer-gameplay.html
@@ -520,6 +520,62 @@
             font-size: 1.1rem;
         }
 
+        /* Personal Result Box */
+        .personal-result-box {
+            background: linear-gradient(135deg, rgba(33, 150, 243, 0.2), rgba(33, 150, 243, 0.3));
+            backdrop-filter: blur(30px);
+            border: 2px solid rgba(33, 150, 243, 0.5);
+            border-radius: 25px;
+            padding: 25px;
+            margin-bottom: 30px;
+            box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
+        }
+
+        .personal-result-title {
+            color: #2196F3;
+            font-size: 1.3rem;
+            font-weight: 800;
+            margin-bottom: 20px;
+            text-align: center;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .personal-result-content {
+            display: grid;
+            gap: 12px;
+        }
+
+        .personal-result-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 12px 15px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 15px;
+        }
+
+        .personal-result-item.highlight {
+            background: linear-gradient(135deg, rgba(255, 215, 0, 0.2), rgba(255, 215, 0, 0.3));
+            border: 2px solid rgba(255, 215, 0, 0.5);
+        }
+
+        .personal-label {
+            color: rgba(255, 255, 255, 0.9);
+            font-size: 1rem;
+            font-weight: 600;
+        }
+
+        .personal-value {
+            color: white;
+            font-size: 1.1rem;
+            font-weight: 800;
+        }
+
+        .personal-result-item.highlight .personal-value {
+            color: #FFD700;
+            font-size: 1.3rem;
+        }
+
         .results-grid {
             display: grid;
             gap: 18px;
@@ -906,6 +962,25 @@
                 </div>
                 <div class="correct-answer">
                     ✅ Korrekte Antwort: <span id="correct-count">0</span> Spieler
+                </div>
+            </div>
+
+            <!-- Personal Result Box -->
+            <div class="personal-result-box fadeInUp" id="personal-result" style="display: none;">
+                <div class="personal-result-title">🎯 Dein Ergebnis</div>
+                <div class="personal-result-content">
+                    <div class="personal-result-item">
+                        <span class="personal-label">Deine Schätzung:</span>
+                        <span class="personal-value" id="personal-estimation">-</span>
+                    </div>
+                    <div class="personal-result-item">
+                        <span class="personal-label">Status:</span>
+                        <span class="personal-value" id="personal-status">-</span>
+                    </div>
+                    <div class="personal-result-item highlight">
+                        <span class="personal-label">Trinken:</span>
+                        <span class="personal-value" id="personal-sips">-</span>
+                    </div>
                 </div>
             </div>
 
@@ -1441,6 +1516,8 @@
         if (!firebaseService.isReady) return;
 
         try {
+            log(`📥 Loading round ${roundNumber} from Firebase...`);
+
             const roundRef = firebaseService.database.ref(`games/${gameState.gameId}/rounds/round_${roundNumber}`);
             const snapshot = await roundRef.once('value');
 
@@ -1451,9 +1528,14 @@
                 if (currentQuestion) {
                     displayQuestion(currentQuestion);
 
-                    // Setup round listener
+                    // WICHTIG: Setup round listener SOFORT beim Laden der Frage
+                    // Nicht erst beim Absenden der Antwort!
                     setupRoundListener(roundNumber);
+
+                    log('✅ Question loaded and listener setup');
                 }
+            } else {
+                log('⚠️ Round not found in Firebase');
             }
         } catch (error) {
             log(`❌ Error loading round: ${error.message}`, 'error');
@@ -1461,35 +1543,48 @@
     }
 
     function setupRoundListener(roundNumber) {
+        // Remove old listener if exists
         if (roundListener) {
             try {
                 roundListener.off();
+                log('🗑️ Removed old round listener');
             } catch (e) {}
         }
+
+        log(`🎧 Setting up round listener for round ${roundNumber}`);
 
         roundListener = firebaseService.listenToRound(gameState.gameId, roundNumber, (snapshot) => {
             if (snapshot.exists()) {
                 currentRoundData = snapshot.val();
-                log(`📊 Round ${roundNumber} update`);
 
-                // Check if all players answered
                 const answers = currentRoundData.answers || {};
                 const answerCount = Object.keys(answers).length;
                 const playerCount = Object.keys(currentPlayers).length;
 
-                log(`Answers: ${answerCount}/${playerCount}`);
+                log(`📊 Round ${roundNumber} listener triggered: ${answerCount}/${playerCount} answers (Phase: ${currentPhase})`);
 
-                if (answerCount === playerCount && currentPhase === 'waiting') {
-                    // All answered, calculate results
-                    calculateAndShowResults();
-                }
-
-                // Update waiting status
+                // Update waiting status if in waiting phase
                 if (currentPhase === 'waiting') {
                     updateWaitingStatus(answers);
+
+                    // CHECK: All players answered?
+                    if (answerCount >= playerCount && playerCount >= 2) {
+                        log('🎉 ALL PLAYERS ANSWERED! Showing results for EVERYONE...');
+
+                        // Small delay to ensure UI is ready
+                        setTimeout(() => {
+                            if (currentPhase === 'waiting') { // Double-check we're still in waiting
+                                calculateAndShowResults();
+                            }
+                        }, 300);
+                    }
                 }
+            } else {
+                log('⚠️ Round data not found in listener');
             }
         });
+
+        log('✅ Round listener active and waiting for updates');
     }
 
     function handleNewRound(roundNumber) {
@@ -1518,10 +1613,12 @@
         // Start round in Firebase
         if (firebaseService.isReady) {
             await firebaseService.startNewRound(gameState.gameId, currentQuestionNumber, currentQuestion);
+
+            // WICHTIG: Setup listener SOFORT nach dem Erstellen der Runde
             setupRoundListener(currentQuestionNumber);
         }
 
-        log('✅ New round started');
+        log('✅ New round started and listener setup');
     }
 
     function generateRandomQuestion() {
@@ -1564,6 +1661,12 @@
         document.querySelectorAll('.answer-btn').forEach(btn => {
             btn.classList.remove('selected');
         });
+
+        // Hide personal result box
+        const personalBox = document.getElementById('personal-result');
+        if (personalBox) {
+            personalBox.style.display = 'none';
+        }
 
         updateSelectedNumber(userEstimation);
         updateNumberSelection();
@@ -1677,14 +1780,49 @@
                     gameState.playerId,
                     answerData
                 );
+
+                log('✅ Answer submitted to Firebase');
             }
 
             showNotification('Antworten gesendet! 🎯', 'success');
             showPhase('waiting');
 
+            // WICHTIG: Sofort checken ob alle schon geantwortet haben
+            // (für den Fall dass wir der letzte Spieler sind)
+            setTimeout(() => {
+                checkIfAllAnswered();
+            }, 1000);
+
         } catch (error) {
             log(`❌ Error submitting: ${error.message}`, 'error');
             showNotification('Fehler beim Senden', 'error');
+        }
+    }
+
+    // Neue Funktion: Manueller Check ob alle geantwortet haben
+    async function checkIfAllAnswered() {
+        if (!firebaseService.isReady || !currentQuestionNumber) return;
+
+        try {
+            const roundRef = firebaseService.database.ref(`games/${gameState.gameId}/rounds/round_${currentQuestionNumber}`);
+            const snapshot = await roundRef.once('value');
+
+            if (snapshot.exists()) {
+                const roundData = snapshot.val();
+                const answers = roundData.answers || {};
+                const answerCount = Object.keys(answers).length;
+                const playerCount = Object.keys(currentPlayers).length;
+
+                log(`🔍 Manual check: ${answerCount}/${playerCount} answers`);
+
+                if (answerCount >= playerCount && playerCount >= 2 && currentPhase === 'waiting') {
+                    log('✅ All answered detected in manual check!');
+                    currentRoundData = roundData;
+                    calculateAndShowResults();
+                }
+            }
+        } catch (error) {
+            log(`❌ Error in manual check: ${error.message}`, 'error');
         }
     }
 
@@ -1705,8 +1843,8 @@
         const statusContainer = document.getElementById('players-status');
         statusContainer.innerHTML = '';
 
-        Object.values(currentPlayers).forEach(player => {
-            const hasAnswered = answers[player.id] !== undefined;
+        Object.entries(currentPlayers).forEach(([playerId, player]) => {
+            const hasAnswered = answers[playerId] !== undefined;
 
             const statusItem = document.createElement('div');
             statusItem.className = 'player-status-item';
@@ -1716,7 +1854,7 @@
                 '<span class="status-indicator status-waiting">⏳ Wartet...</span>';
 
             statusItem.innerHTML = `
-                    <span>${player.name}</span>
+                    <span>${player.name || 'Spieler'}</span>
                     ${statusIndicator}
                 `;
 
@@ -1734,6 +1872,8 @@
         const answers = currentRoundData.answers;
         const actualYesCount = Object.values(answers).filter(a => a.answer === true).length;
 
+        log(`✅ Alle haben geantwortet! Richtige Antwort: ${actualYesCount} Spieler`);
+
         // Calculate results
         const results = Object.values(answers).map(playerAnswer => {
             const difference = Math.abs(playerAnswer.estimation - actualYesCount);
@@ -1746,6 +1886,7 @@
             }
 
             return {
+                playerId: playerAnswer.playerId,
                 playerName: playerAnswer.playerName,
                 answer: playerAnswer.answer,
                 estimation: playerAnswer.estimation,
@@ -1755,10 +1896,13 @@
             };
         });
 
+        // SORT BY SIPS (DESCENDING - Most sips first)
+        results.sort((a, b) => b.sips - a.sips);
+
         displayRoundResults(results, actualYesCount);
         showPhase('results');
 
-        log('📊 Results calculated:', results);
+        log('📊 Results calculated and displayed for all players');
     }
 
     function displayRoundResults(results, actualYesCount) {
@@ -1767,23 +1911,61 @@
             `${actualYesCount} von ${totalPlayers || results.length} Spielern haben mit "Ja" geantwortet`;
         document.getElementById('correct-count').textContent = actualYesCount;
 
+        // Find current player's result
+        const myResult = results.find(r => r.playerId === gameState.playerId);
+
+        if (myResult) {
+            // Show personal result box
+            const personalBox = document.getElementById('personal-result');
+            personalBox.style.display = 'block';
+
+            document.getElementById('personal-estimation').textContent = myResult.estimation;
+
+            const statusText = myResult.isCorrect ?
+                '✅ Richtig geschätzt!' :
+                `❌ Falsch (Diff: ${myResult.difference})`;
+            const statusEl = document.getElementById('personal-status');
+            statusEl.textContent = statusText;
+            statusEl.style.color = myResult.isCorrect ? '#4CAF50' : '#f44336';
+
+            const sipsText = myResult.sips === 0 ?
+                '🎯 Keine! Perfekt!' :
+                `${myResult.sips} Schlücke 🍺`;
+            document.getElementById('personal-sips').textContent = sipsText;
+        }
+
+        // Display results grid (sorted by sips - descending)
         const resultsGrid = document.getElementById('results-grid');
         resultsGrid.innerHTML = '';
 
-        results.forEach(result => {
+        results.forEach((result, index) => {
             const resultItem = document.createElement('div');
             resultItem.className = 'result-item';
+
+            // Highlight current player
+            if (result.playerId === gameState.playerId) {
+                resultItem.style.border = '2px solid #2196F3';
+                resultItem.style.background = 'rgba(33, 150, 243, 0.15)';
+            }
 
             const avatar = result.playerName.substring(0, 2).toUpperCase();
             const answerText = result.answer ? 'Ja' : 'Nein';
             const sipsText = result.sips === 0 ? 'Perfekt! 🎯' : `${result.sips} 🍺`;
             const sipsClass = result.sips === 0 ? 'none' : '';
 
+            // Add rank badge
+            let rankBadge = '';
+            if (index === 0 && result.sips > 0) {
+                rankBadge = '<span style="color: #f44336; font-weight: 800; margin-left: 5px;">🥇 Meiste</span>';
+            } else if (index === results.length - 1 && results.length > 1) {
+                rankBadge = '<span style="color: #4CAF50; font-weight: 800; margin-left: 5px;">🏆 Wenigste</span>';
+            }
+
             resultItem.innerHTML = `
                     <div class="player-result">
                         <div class="player-avatar">${avatar}</div>
                         <div class="player-info">
-                            <div class="player-name">${result.playerName}</div>
+                            <div class="player-name">${result.playerName}${rankBadge}</div>
                             <div class="player-answer">${answerText} • Tipp: ${result.estimation}</div>
                         </div>
                     </div>
